<resources>
    <string name="app_name">MNX_chat</string>
    <string name="server">mindnotix.tech</string>
    <string name="base_url">http://mindnotix.tech:9090/plugins/</string>
    <string name="action_settings">Settings</string>
    <string name="action_restart">Restart</string>
    <string name="network_wifi">Wifi</string>
    <string name="network_mobile">Mobile</string>
    <string name="shared_preference">SharedPref</string>
    <string name="welcome">The Best Way to Keep in Touch With Your Network</string>
    <string name="uname">Name</string>
    <string name="mnum">Mobile Number</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="no_conversation">No conversation available \n Swipe to start new conversation</string>
    <string name="conversation">Conversation</string>
    <string name="contacts">Contacts</string>
    <string name="status">Status</string>
    <string name="profile">Profile</string>
    <string name="no_contacts">No contacts found.</string>
    <string name="def_name">Randy Ortan</string>
    <string name="def_status">Default Status</string>
    <string name="def_date">12:30 pm</string>
    <string name="def_text">Hai How R u</string>
    <string name="def_num">95003813498</string>
    <string name="def_user_status">Hey there am using Chat Here</string>
    <string name="profile_title">Phone number</string>
    <string name="base">http://mindnotix.tech</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="one_to_one_clear">Clear</string>
    <string name="one_to_one_mute">Mute</string>
    <string name="one_to_one_block">Block</string>
    <string name="one_to_one_unblock">Unblock</string>
    <string name="create_group">Create Group</string>
    <string name="hint_enter_a_message">Enter a message</string>
    <string name="server_ip">198.168.0.17</string>
    <string name="Empty_conversation">No conversation available</string>
    <string name="contact_empty">No contact available</string>

    <string name="type_your_message">Type a message</string>
    <string name="NoRecent">No recent</string>


    <string-array name="sample_status">
        <item name="status1">Only chat</item>
        <item name="status2">Leave Office</item>
        <item name="status3">Free to chat</item>
        <item name="status3">Feel Lonely</item>
    </string-array>

    <string-array name="view_types_dialog">
        <item name="image">Image (default)</item>
        <item name="voice">Voice message (custom)</item>
    </string-array>

    <string name="your_string_here"><u>Register</u></string>
    <string name="your_string_login"><u>Login</u></string>
    <string name="logout">logout</string>

    <string name="close">Close</string>
    <string name="default_status">Hey</string>
    <string name="no_status">***no status***</string>
    <string name="status_available">Available</string>
    <string name="status_busy">Busy</string>
    <string name="status_At_school">At school</string>
    <string name="status_At_work">At work</string>
    <string name="status_meeting">In a meeting</string>
    <string name="SelectContact">Select Contact</string>
    <string name="NoContacts">No contacts yet</string>
    <string name="InviteText">Hey, let\'s switch to yahala: https://www.facebook.com/YahalaMessenger</string>
    <string name="TodayAt">today at</string>
    <string name="YesterdayAt">yesterday at</string>
    <string name="OtherAt">at</string>
    <string name="Online">online</string>
    <string name="Offline">offline</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="Away">Away</string>
    <string name="FreeToChat">Free to chat</string>
    <string name="DoNotDisturb">Do not disturb</string>
    <string name="LastSeen">last seen</string>
    <string name="LastSeenDate">last seen</string>
    <string name="InviteFriends">Invite Friends</string>
    <string name="Yesterday">Yesterday</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="ok">Ok</string>
    <string name="sample">The eclipse IDE that comes along with android SDK, doesn’t
     have J2EE and Tomcat server support. So we have to add J2EE and tomcat extensions.
  .</string>
    <string name="edit_profile_image">edit profile image</string>
    <string name="remove">Remove</string>
    <string name="gallery">Gallery</string>
    <string name="Wallpaper">Wallpaper</string>
    <string name="send_image_error">Send image error</string>
    <string name="image_message_body">Image</string>
</resources>
