<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:emojicon="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/dim5">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_Profile"
        android:layout_width="65dp"
        android:src="@drawable/ic_def_profile"
        android:layout_height="65dp"
        android:layout_marginLeft="1dp" />

    <LinearLayout
        android:id="@+id/lay_main"
        android:layout_toRightOf="@+id/iv_Profile"
        android:layout_centerVertical="true"
        android:padding="@dimen/dim10"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_Name"
            android:textStyle="bold"
            android:textSize="@dimen/text18"
            android:text="@string/def_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <hani.momanii.supernova_emoji_library.Helper.EmojiconTextView
            android:id="@+id/tv_message"
            android:layout_marginTop="@dimen/dim7"
            android:text="@string/def_text"
            android:layout_toRightOf="@+id/iv_pic"
            android:layout_below="@+id/tv_Name"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            emojicon:emojiconAlignment="bottom"
            emojicon:emojiconSize="65sp"
            emojicon:emojiconUseSystemDefault="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/def_date"
            android:layout_above="@+id/tv_Count"
            android:layout_width="wrap_content"
            android:visibility="invisible"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_Count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dim5"
            android:layout_gravity="center"
            android:background="@drawable/shape_rectangle"
            android:textColor="@android:color/white"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1" />

    </LinearLayout>


</RelativeLayout>