<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/profileback"
    tools:context=".UserProfileActivity">


    <include layout="@layout/toolbar"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_below="@+id/toolbar"
        android:src="@drawable/ic_def_profile"
        android:onClick="profileView"
        android:layout_marginTop="@dimen/dim70"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/dim150"
        android:layout_height="@dimen/dim150" />


    <ScrollView
        android:layout_below="@+id/iv_profile"
        android:layout_width="match_parent"
         android:layout_height="match_parent">
        <RelativeLayout

        android:background="@android:color/white"
        android:padding="@dimen/dim10"
        android:layout_marginTop="@dimen/dim60"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:paddingLeft="@dimen/dim10"
            android:paddingRight="@dimen/dim10"
            android:paddingTop="@dimen/dim10"
            android:paddingBottom="@dimen/dim5"
            android:layout_alignParentLeft="true"
            android:textColor="@color/colorAccent"
            android:text="@string/profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_alignParentLeft="true"
            android:padding="@dimen/dim10"
            android:text="@string/def_num"
            android:textColor="@android:color/black" />

        <View
            android:id="@+id/v1"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_below="@+id/status"
            android:background="#3000"/>


        <TextView
            android:id="@+id/title2"
            android:layout_below="@+id/v1"
            android:paddingLeft="@dimen/dim10"
            android:paddingRight="@dimen/dim10"
            android:paddingTop="@dimen/dim10"
            android:layout_alignParentLeft="true"
            android:paddingBottom="@dimen/dim5"
            android:textColor="@color/colorAccent"
            android:text="Your status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/mynumber"
            android:padding="10dp"
            android:layout_below="@+id/title2"
            android:textColor="@android:color/black"
            android:text="@string/def_status"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <View
            android:id="@+id/v2"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_below="@+id/mynumber"
            android:background="#3000"/>

        <TextView
            android:id="@+id/title3"
            android:layout_below="@+id/v2"
            android:paddingLeft="@dimen/dim10"
            android:paddingRight="@dimen/dim10"
            android:paddingTop="@dimen/dim10"
            android:layout_alignParentLeft="true"
            android:paddingBottom="@dimen/dim5"
            android:textColor="@color/colorAccent"
            android:text="Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/my_name"
            android:padding="10dp"
            android:layout_below="@+id/title3"
            android:layout_alignParentLeft="true"
            android:textColor="@android:color/black"
            android:text="@string/def_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />





    </RelativeLayout>
    </ScrollView>

</RelativeLayout>
